--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,19 @@
 *{
     margin: 0px;
 }
+body{
+    background-color: rgb(224, 182, 182);
+}
 nav{
     width: 100vw;
     /*height: 100;*/
    /* border: 1px solid black;*/
     background-color: brown;
+    box-shadow: 10px 5px 5px rgb(110, 28, 28);
 }
 ul{
     display: flex;
-    justify-items: center;
+    justify-content: flex-start;
     align-items: center;
     width: 80vw;
     height: 100px;
@@ -33,7 +37,34 @@ h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: -5px 0px 10px 60px;
     font-size: 48px;
-
 }
-
-
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(224, 182, 182);
+}
+.splash{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 800px;
+    height:400px;
+    /*border: 4px solid brown;*/
+    border-radius: 5px;
+    box-shadow: -10px 5px 20px rgb(110, 28, 28);
+    flex-direction: column;
+    margin-top: 50px;
+}
+h2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(127, 52, 52)
+}
+input{
+    border-radius: 10px;
+    /*color: white;*/
+    border:0px;
+    margin:10px;
+    width: 500px;
+    height: 25px;
+}
