--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Site</title>
-    <link rel="stylesheet" href="../../public/style.css" >
+    <link rel="stylesheet" href="/style.css" >
 </head>
 <body>
     <nav>
@@ -17,7 +17,9 @@
         <h1>Tech Blog</h1>
     </nav>
     <main>
-        {{{ body }}}
+        <div class = 'splash'>
+              {{{ body }}}
+        </div>
     </main>
     <footer>
 
